--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,18 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h1>Hubstream Icons (2021)</h1>
+<div>
+  <button>Glyphicons 1.9</button>
+  <button>Glyphicons 3.x</button>
+  <button>Transportation</button>
+  <button>Commerce</button>
+  <button>Investigation</button>
+</div>
+<div class="search-section">
+  <input />
+</div>
+<div id="content">
+  aasdf
+  <p>
+    <span class="glyphicon glyphicon-search"></span>
+    <span class="glyphicon glyphicon-search"></span>
+  </p>
+</div>
