--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* Add application styles & imports to this file! */
+h1,
+p {
+  font-family: Lato;
+}
+.search-section {
+  padding: 10px;
+  background-color: #eee;
+  margin-top: 10px;
+}
+.search-section input {
+  font-size: 24px;
+  padding: 10px;
+  width: calc(100% - 20px);
+  border: none;
+  border-radius: 4px;
+}
+#content {
+  background-color: #eee;
+  padding: 10px;
+}
