3 files modified, 1 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 <div id="content">
   aasdf
   <p>
-    <span class="glyphicon glyphicon-search"></span>
-    <span class="glyphicon glyphicon-search"></span>
+    <span class="glyphicon glyphicon-pencil"></span>
+    <span class="glyphicon glyphicon-plus"></span>
   </p>
 </div>
