--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -258,7 +258,7 @@ th {
   }
 }
 @font-face {
-  font-family: 'Glyphicons Regular';
+  font-family: 'Glyphicons Regular 300';
   src: url('https://angular-ivy-fqdhva.stackblitz.io/assets/glyphicons-regular.woff')
     format('woff');
 }
@@ -266,7 +266,7 @@ th {
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: 'Glyphicons Regular';
+  font-family: 'Glyphicons Regular 300';
   font-style: normal;
   font-weight: 400;
   line-height: 1;
